# openitools

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package-lock.json
.cargo/: config.toml
.github/workflows/: build_and_release.yaml
backend/: Cargo.toml  build.rs  tauri.conf.json
backend/openitools/: Cargo.toml  build.rs  tauri.conf.json
backend/openitools/icons/: icon.icns
backend/openitools/src/: lib.rs  main.rs
backend/openitools/src/device_management/: device.rs
backend/openitools/src/device_management/handlers/: battery.rs  hardware.rs  mod.rs  os.rs  storage.rs
backend/openitools/src/device_management/ipcc/: check.rs  install.rs  mod.rs  prep_file.rs  query.rs
backend/openitools_idevice/: Cargo.toml
backend/openitools_idevice/src/: lib.rs
backend/src/: lib.rs  main.rs
backend/src/device_management/: device.rs  mod.rs  product_types.rs
backend/src/device_management/handlers/: battery.rs  hardware.rs  mod.rs  os.rs  storage.rs
backend/src/device_management/ipcc/: check.rs  mod.rs  prep_file.rs  query.rs
frontend/: .oxlintrc.json  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  app.css  main.ts
frontend/src/components/: AppSidebar.vue  BreadCrumb.vue  NavMain.vue  NavSecondary.vue
frontend/src/lib/: device-context.ts  types.ts  utils.ts
frontend/src/lib/components/: app-sidebar.svelte  nav-main.svelte  nav-projects.svelte  nav-secondary.svelte  nav-user.svelte  sidebar-page.svelte
frontend/src/lib/components/ui/avatar/: avatar-fallback.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/network/ipcc/: +page.svelte
frontend/src/views/: APN.vue  Documentation.vue  IPCC.vue  Settings.vue  Support.vue  index.ts
