[package]
name = "openitools"
version = "0.1.0"
description = "Free and Open-Source iPhone Utilities "
authors = ["Abdullah Al-Banna"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "openitools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

rsmobiledevice = { git = "https://github.com/abdullah-albanna/rsmobiledevice.git" , rev = "e5ed8bc"}
regex = "1.11.1"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12.19", features = ["blocking"] }
tokio = { version = "1.45.1", features = ["full"] }
thiserror = "2.0.12"
urlencoding = "2.1.3"

async_zip = { version = "0.0.17", features = ["full"] }
futures-util = "0.3.31"
tokio-tar = "0.3.1"

[lints]
workspace = true
